Fix spacing issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,5 +5,5 @@
 @tailwind utilities;
 
 html {
-  @apply font-nunito bg-sky-blue text-black;
+  @apply font-nunito text-black;
 }
